update leetcode-master rules